# my-selenium-automations

./: .editorconfig  .gitignore  Makefile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: CODEOWNERS
my_selenium_automations/: __init__.py  fundo_reserva_ibagy.py
