[project]
name = "my-selenium-automations"
version = "2025.05.20"
authors = [{ name = "Fernando Costa Bertoldi", email = "fcbertoldi@gmail.com" }]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
fundo-reserva-ibagy = "my_selenium_automations:fundo_reserva_ibagy"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pyright]
venvPath = "/home/fernando/.virtualenvs"
venv= "my-selenium-automations"
